--- a/style.css
+++ b/style.css
@@ -43,38 +43,100 @@ body {
     justify-content: center;
     align-items: center;
     position: relative;
+    cursor: pointer;
+}
+
+.cell.x,
+.cell.circle {
+    cursor: not-allowed;
+}
+
+.cell.x::before,
+.cell.x::after,
+.cell.circle::before,
+.cell.circle::after {
+    background-color: black;
+}
+
+.board.x .cell:not(.x):not(.circle):hover::before,
+.board.x .cell:not(.x):not(.circle):hover::after,
+.board.circle .cell:not(.x):not(.circle):hover::before,
+.board.circle .cell:not(.x):not(.circle):hover::after {
+    background-color: #cfcfcf;
 }
 
 /* X shape */
 .cell.x::before,
-.cell.x::after {
+.cell.x::after,
+.board.x .cell:not(.x):not(.circle):hover::before,
+.board.x .cell:not(.x):not(.circle):hover::after {
     content: '';
     width: calc(var(--mark-size) * 0.2);
     height: var(--mark-size);
-    background-color: black;
     position: absolute;
 }
-.cell.x::before {
+
+.cell.x::before,
+.board.x .cell:hover::before {
     transform: rotate(45deg);
 }
-.cell.x::after {
+
+.cell.x::after,
+.board.x .cell:hover::after  {
     transform: rotate(-45deg);
 }
 
 /* circle shape */
 .cell.circle::before,
-.cell.circle::after {
+.cell.circle::after,
+.board.circle .cell:not(.x):not(.circle):hover::before,
+.board.circle .cell:not(.x):not(.circle):hover::after {
     content: '';
     position: absolute;
     border-radius: 50%;
 }
-.cell.circle::before {
+
+.cell.circle::before,
+.board.circle .cell:not(.x):not(.circle):hover::before {
     width: var(--mark-size);
     height: var(--mark-size);
-    background-color: black;
 }
-.cell.circle::after {
+
+.cell.circle::after,
+.board.circle .cell:not(.x):not(.circle):hover::after {
     width: calc(var(--mark-size) * 0.6);
     height: calc(var(--mark-size) * 0.6);
     background-color: white;
+}
+
+/* display winner screen */
+.display-winner.show {
+    display: flex;
+}
+
+.display-winner {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: #000000e7;
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 4rem;
+}
+
+.display-winner button {
+    font-size: 1rem;
+    margin-top: 1rem;
+    padding: 0.25rem 0.5rem;
+    border-radius: 0.8rem;
+}
+.display-winner button:hover {
+    background-color: black;
+    color: white;
+    border: 2px solid white;
 }
